# vdt-2026-3d-gaussian-splatting

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: docker-publish.yml
include/core/: constants.hpp  mesh_converter.hpp  stats_printer.hpp  types.hpp
include/io/: glb_exporter.hpp  ply_reader.hpp
include/pipeline/: optimization_pipeline.hpp
include/processor/: ar_extractor.hpp  gsplat_filter.hpp  mesh_generator.hpp  mesh_optimizer.hpp
reports/: report.tex
scripts/: batch_run.sh  bootstrap_vcpkg.sh  build.sh  check_size.sh  fetch_third_party.sh  params.conf  run.sh
src/: main.cpp
src/core/: mesh_converter.cpp  stats_printer.cpp
src/io/: glb_exporter.cpp  ply_reader.cpp
src/pipeline/: optimization_pipeline.cpp
src/processor/: ar_extractor.cpp  gsplat_filter.cpp  mesh_generator.cpp  mesh_optimizer.cpp
tests/: test_filter.cpp  test_io.cpp
web_demo/: README.md  index.html  serve.py
